[package]
name = "eco-engine-rs"
version = "0.1.0"
authors = ["echo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vk-sys = "=0.5.2"
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano" }
